Issue 45139: Filter modal second filter type input select to overflow over the bottom of the menu

--- a/packages/components/src/theme/filter.scss
+++ b/packages/components/src/theme/filter.scss
@@ -122,6 +122,12 @@
 
 .filter-expression__input-select {
     width: 75%;
+
+    // Issue 45139
+    .select-input__menu-portal {
+        top: auto;
+        left: auto;
+    }
 }
 
 .filter-cards__card {
